Bug 321458 - User is not prompted to enter his credentials if an account already exists in kwallet
Summary: User is not prompted to enter his credentials if an account already exists in...
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Google Resource (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-21 07:38 UTC by Christophe Marin
Modified: 2013-06-21 10:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2013-06-21 07:38:55 UTC
Using master from a couple days ago.

What I tried:

RMB in kaddressbook, Add address book, and selected the google resource.

the resources window disappeared and nothing more. No calendar appeared nor any dialog.

After looking in akonadiconsole, the resource is there and its status is: 'Configured account doesn't exist'.

In kwallet, there's an (supposedly) old google resource entry with some credentials.

Whatever the case is, I believe the user should see the accounts selector.
Comment 1 Christophe Marin 2013-06-21 07:40:35 UTC
akonadi output: 

Known subscriber "kaddressbook" subscribes again 
Known subscriber "kaddressbook" subscribes again 
Known subscriber "kaddressbook" subscribes again 
Database "akonadi" opened using driver "QMYSQL" 
Database "akonadi" opened using driver "QMYSQL" 
akonadi_googlecontacts_resource_0(14697)/KSharedDataCache KSharedDataCache::insert: Overwriting existing cached entry due to collision.
akonadi_googlecontacts_resource_0(14697)/libakonadi Akonadi::SessionPrivate::init: "akonadi_googlecontacts_resource_0"
akonadi_googlecontacts_resource_0(14697)/libakonadi Akonadi::SessionPrivate::reconnect: connectToServer "/home/krop/.local/share/akonadi/socket-yuuko/akonadiserver.socket"
Known subscriber "akonadi_googlecontacts_resource_0" subscribes again 
akonadi_googlecontacts_resource_0(14697)/libakonadi Akonadi::SessionPrivate::dataReceived: Server protocol version is: 32
Database "akonadi" opened using driver "QMYSQL" 
akonadi_googlecontacts_resource_0(14697) GoogleResource::slotAccountManagerReady: true
akonadi_googlecontacts_resource_0(14697) GoogleAccountManager::findAccountInWallet: Account "" not found in KWallet
Comment 2 Christophe Marin 2013-06-21 07:59:13 UTC
and the same test with the calendar resource: 

akonadi_googlecalendar_resource_0(14830)/KSharedDataCache KSharedDataCache::insert: Overwriting existing cached entry due to collision.
akonadi_googlecalendar_resource_0(14830)/libakonadi Akonadi::SessionPrivate::init: "akonadi_googlecalendar_resource_0"
akonadi_googlecalendar_resource_0(14830)/libakonadi Akonadi::SessionPrivate::reconnect: connectToServer "/home/krop/.local/share/akonadi/socket-yuuko/akonadiserver.socket"
Known subscriber "akonadi_googlecalendar_resource_0" subscribes again 
akonadi_googlecalendar_resource_0(14830)/libakonadi Akonadi::SessionPrivate::dataReceived: Server protocol version is: 32
Database "akonadi" opened using driver "QMYSQL" 
akonadi_googlecalendar_resource_0(14830) GoogleResource::slotAccountManagerReady: true
akonadi_googlecalendar_resource_0(14830) GoogleAccountManager::findAccountInWallet: Account "" not found in KWallet

same result, no resource appear in korganizer but it exists in akonadiconsole
Comment 3 Daniel Vrátil 2013-06-21 10:06:12 UTC
Git commit 16ae903a39da31bc7867130f12fc70dcbdf978b9 by Dan Vrátil.
Committed on 21/06/2013 at 10:05.
Pushed by dvratil into branch 'master'.

Always show configuration after adding a new Google resource
FIXED-IN: 4.11

M  +1    -1    resources/google/common/googleaccountmanager.cpp
M  +9    -3    resources/google/common/googleresource.cpp
M  +1    -0    resources/google/common/googleresource.h

http://commits.kde.org/kdepim-runtime/16ae903a39da31bc7867130f12fc70dcbdf978b9