Always show configuration after adding a new Google resource

BUG: 321458
FIXED-IN: 4.11